fixed heuristics